--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Josh Sevy",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
-
